# nomad-material-processing

./: .cruft.json  .gitignore  404.html  CITATION.cff  LICENSE  README.md  contact.html  index.html  main.py  mkdocs.yml  move_template_files.sh  nomad.yaml  nomad_plugin_metadata.yaml  pyproject.toml  requirements_docs.txt
.devcontainer/: devcontainer.json
.github/workflows/: actions.yml  cruft-update.yml  mkdocs-deploy.yml  python-test.yml
.metadata/: nomad_plugin_metadata.auto.yaml  nomad_plugin_metadata.manual.yaml
docs/: contact.md  index.md
docs/explanation/: data_model.md  explanation.md  levelsofschema.md  schemas.md  schemas_and_readers.md
docs/how_to/: contribute_to_the_documentation.md  contribute_to_this_plugin.md  develop.md  install.md  install_this_plugin.md  use_this_plugin.md
docs/reference/: references.md  schemas.md  solution.md  vapor_depostion.md
docs/reference/schemas/: combinatorial.md  crystal_growth.md  epitaxy.md  general.md
docs/reference/schemas/solution/: general.md
docs/reference/schemas/vapor_deposition/: general.md
docs/tutorial/: tutorial.md
explanation/: data_model.html  levelsofschema.html  schemas.html
how_to/: develop.html  install.html  use_this_plugin.html  use_this_plugin_old.html
reference/: references.html  schemas.html  solution.html  vapor_depostion.html
reference/schemas/: combinatorial.html  crystal_growth.html  epitaxy.html  general.html
reference/schemas/solution/: general.html
reference/schemas/vapor_deposition/: general.html
reference/schemas/vapor_deposition/cvd/: general.html  movpe.html
reference/schemas/vapor_deposition/pvd/: general.html  mbe.html  pld.html  sputtering.html  thermal.html
search/: search_index.json
src/nomad_material_processing/: __init__.py  chemical_vapor_deposition.py  combinatorial.py  crystal_growth.py  epitaxy.py  general.py  physical_vapor_deposition.py  utils.py  vapor_deposition.py
src/nomad_material_processing/general/: schema.py
src/nomad_material_processing/material_systems/: __init__.py  general.py
src/nomad_material_processing/sample_solidification/: __init__.py  precipitation.py
src/nomad_material_processing/solution/: __init__.py  general.py  nomad_plugin.yaml  schema.py  utils.py
src/nomad_material_processing/vapor_deposition/: __init__.py  general.py  nomad_plugin.yaml
src/nomad_material_processing/vapor_deposition/cvd/: __init__.py  general.py  movpe.py  nomad_plugin.yaml
src/nomad_material_processing/vapor_deposition/pvd/: __init__.py  general.py  mbe.py  nomad_plugin.yaml  pld.py  sputtering.py  thermal.py
src/nomad_synthesis_plugin/apps/: __init__.py
src/nomad_synthesis_plugin/parsers/: __init__.py  myparser.py
src/nomad_synthesis_plugin/schema_packages/: __init__.py  cap_experiment.py  crystallization.py  mypackage.py
tests/: conftest.py  test_schema.py
tests/apps/: test_app.py
tests/data/: Experiment_Labmax.xlsx  Experiment_optimax.xlsx  MRO017 Reactor data 2016-09-30 CaP ohne IR richtig.csv  rpppp22.archive.json  rpppp33.archive.json  test.archive.yaml  test1.archive.yaml  test1_out.archive.json  test_crystalline_substrate.archive.yaml  test_physical_vapor_deposition.archive.yaml  test_pulsed_laser_deposition.archive.yaml  test_sample_deposition.archive.yaml  test_solution.archive.yaml  test_solution_component.archive.yaml  test_sputter_deposition.archive.yaml  test_substrate.archive.yaml  test_thermal_evaporation.archive.yaml  test_thin_film.archive.yaml  test_thin_film_stack.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema.py
tests/solution/: test_solution_schema.py
tutorial/: tutorial.html
yamlschema/: cap_experiment.schema.archive.yaml
(+7 files in other folders)
